tests/errors/frame_exist_55/e5.src
.IPPcode21

CREATEFRAME
DEFVAR TF@a
POPFRAME
